--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "fast-vite-nestjs-electron",
+  "name": "wormhole",
   "version": "0.0.1",
   "packageManager": "pnpm@7.5.0",
-  "description": "Vite + Electron with esbuild, so fast! ⚡",
+  "description": "一个文件传输工具",
   "main": "dist/main/index.js",
   "scripts": {
     "dev": "rimraf dist && vite",
@@ -17,6 +17,7 @@
     "@nestjs/core": "^8.4.5",
     "@nestjs/microservices": "^8.4.5",
     "bytenode": "^1.3.6",
+    "express": "^4.18.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.5.5",
     "vue": "^3.2.33"
@@ -30,6 +31,7 @@
     "electron-builder": "23.1.0",
     "esbuild": "0.14.48",
     "eslint": "8.18.0",
+    "fs-extra": "^10.1.0",
     "kolorist": "1.5.1",
     "lint-staged": "13.0.3",
     "pnpm": "7.5.0",
