--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@antfu/eslint-config": "0.23.1",
     "@vitejs/plugin-vue": "2.3.3",
     "@vue/compiler-sfc": "3.2.37",
-    "electron": "18.3.5",
+    "electron": "21.3.3",
     "electron-builder": "23.1.0",
     "esbuild": "0.14.48",
     "eslint": "8.18.0",
@@ -36,6 +36,7 @@
     "lint-staged": "13.0.3",
     "pnpm": "7.5.0",
     "rimraf": "3.0.2",
+    "sass": "^1.58.3",
     "simple-git-hooks": "2.8.0",
     "typescript": "4.7.4",
     "vite": "2.9.13",
