--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@nestjs/core": "^8.4.5",
     "@nestjs/microservices": "^8.4.5",
     "bytenode": "^1.3.6",
+    "electron-log": "^5.0.0-beta.16",
     "express": "^4.18.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.5.5",
